--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -1,8 +1,11 @@
+// FONTS =====================================================
+@import url(//fonts.googleapis.com/css?family=Roboto&subset=latin);
+
 // TYPOGRAPHY ================================================
 @doc-font-size: 16;
 @doc-line-height: 26;
-@base-font: 'PT Serif', serif;
-@heading-font: 'PT Sans Narrow', sans-serif;
+@base-font: 'Roboto', 'PT Serif', serif;
+@heading-font: 'Roboto', 'PT Sans Narrow', sans-serif;
 @code-font: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
 @alt-font: @base-font;
 
