--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,11 +41,12 @@
 {% include _scripts.html %}
 
 
-
-
-
-
-
+<link href="//fonts.googleapis.com/css?family=Maven Pro&subset=latin" rel="stylesheet" type="text/css">
+<style>
+* {
+ font-family: 'Maven Pro', sans-serif;
+}
+</style>
 
 
 </body>
