--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -48,6 +48,16 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
-  
+
+
+<link href="//fonts.googleapis.com/css?family=Maven Pro&subset=latin" rel="stylesheet" type="text/css">
+<style>
+* {
+ font-family: 'Maven Pro', sans-serif;
+}
+</style>
+
+
+
 </body>
 </html>
