--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,5 +56,16 @@
 
 {% include _scripts.html %}	        
 
+
+<link href="//fonts.googleapis.com/css?family=Maven Pro&subset=latin" rel="stylesheet" type="text/css">
+<style>
+* {
+ font-family: 'Maven Pro', sans-serif;
+}
+</style>
+
+
+
+
 </body>
 </html>
